--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,68 @@
-/* .App {
-  text-align: center;
+
+:root {
+  --gray: rgba(0,0,0,.1);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
 .App {
-  margin: 2rem;
-  padding: 1rem;
-  width: 50vw;
-  border: 2px solid #333;
+  background-color: #FFF;
+  /* border: 2px solid #ddd; */
+  border: 1px solid var(--gray);
+  border-radius: 12px;
+  box-shadow: 0 0 10px var(--gray);
+  /* box-shadow: 0 0 10px rgba(0,0,0,.2); */
+  /* box-shadow: 0 0 12px rgba(0,0,0,.25); */
+  /* box-shadow: 0 0 5px 5px rgba(0,0,0,.1); */
   display: flex;
   flex-direction: column;
+  margin: 2rem;
+  padding: 1.5rem 1rem;
+  width: 50vw;
+  /* 
+  width: 90%;
+  max-width: 30rem; 
+  margin: 1em 0 5em;
+  position: relative;  
+  */
 }
 
 label, input {display: block;}
 
-input {margin-bottom: 1rem;}
+input {
+  border: 1px solid var(--gray);
+  border-radius: 6px;
+  line-height: 0;
+  margin-bottom: 1rem;
+  outline:none;
+  padding: .5rem 1rem;
+}
+input.inValid {
+  background-color: rgba(255,1,13,.1);
+  /* background-color: #ff010d; */
+  /* 255 85 2 */
+  /*255 1 127 */
+  /* ff010d */
+}
 
-button {max-width: 60px;}
+button {
+  background: linear-gradient(138deg,#ff5502,#ff017f,#ff010d);
+  transition: background-position .15s cubic-bezier(.45,.05,.55,.95);
+  background-size:300% 100%;
+  border-color: white;
+  color: white;
+  padding: 16px 32px;
+  border-radius: 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 1em;
+  cursor: pointer;
+}
+button:disabled {
+  /* background: linear-gradient(138, hsl(19.7,50%,50.4%),hsl(331,50%,50.2%),hsl(357.2,50%,50.2%)); */
+  /* background: linear-gradient(138, hsl(20,100%,50%),hsl(331,100%,50%),hsl(357.2,100%,50%)); */
+  cursor: not-allowed;
+  filter: grayscale(75%) opacity(75%);
+  /* filter: saturate(0%) */
+}
 
 
