--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,30 @@
 :root {
   --gray: rgba(0,0,0,.1);
 }
+
+@font-face {
+  font-family: geomanist-regular;
+  src:  url(https://static.flipgrid.com/fonts/geomanist-regular-webfont.woff2) format("woff2"),
+        url(https://static.flipgrid.com/fonts/geomanist-regular-webfont.woff) format("woff");
+  font-weight:400;
+  font-style:normal;
+}
+@font-face{
+  font-family: geomanist-medium;
+  src:  url(https://static.flipgrid.com/fonts/geomanist-medium-webfont.woff2) format("woff2"),
+        url(https://static.flipgrid.com/fonts/geomanist-medium-webfont.woff) format("woff");
+  font-weight:400;
+  font-style:normal;
+}
+@font-face{
+  font-family: geomanist-bold;
+  src:  url(https://static.flipgrid.com/fonts/geomanist-bold-webfont.woff2) format("woff2"),
+        url(https://static.flipgrid.com/fonts/geomanist-bold-webfont.woff) format("woff");
+  font-weight:700;
+  font-style:normal;
+}
 .App {
+  font-family: geomanist, Helvetica, sans-serif;
   background-color: #FFF;
   /* border: 2px solid #ddd; */
   border: 1px solid var(--gray);
@@ -14,7 +37,8 @@
   display: flex;
   flex-direction: column;
   margin: 2rem;
-  padding: 1.5rem 1rem;
+  /* padding: 1.5rem 1rem; */
+  padding: 2rem;
   width: 50vw;
   /* 
   width: 90%;
@@ -24,7 +48,25 @@
   */
 }
 
+h1 {
+  font-weight: 400;
+  margin: 0;
+}
+h1 strong { font-weight: 700; }
+
+label {
+  font-weight: 700;
+  line-height: 2;
+}
+
 label, input {display: block;}
+
+input:focus,
+input:active,
+button:focus,
+button:active {
+  outline: none;
+}
 
 input {
   border: 1px solid var(--gray);
@@ -33,6 +75,7 @@ input {
   margin-bottom: 1rem;
   outline:none;
   padding: .5rem 1rem;
+  font-size: 1em;
 }
 input.inValid {
   background-color: rgba(255,1,13,.1);
@@ -48,20 +91,25 @@ button {
   background-size:300% 100%;
   border-color: white;
   color: white;
-  padding: 16px 32px;
+  /* padding: 16px 32px; */
+  padding: 1rem 1.5rem;
   border-radius: 12px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin: 1em;
+  align-self: flex-end;
+  
+  /* font-size: 16px; */
+  font-size: 1em;
+  font-weight: 700;
+  /* margin: 1em; */
   cursor: pointer;
 }
 button:disabled {
+  filter: grayscale(75%) opacity(75%);
+  cursor: default;
   /* background: linear-gradient(138, hsl(19.7,50%,50.4%),hsl(331,50%,50.2%),hsl(357.2,50%,50.2%)); */
   /* background: linear-gradient(138, hsl(20,100%,50%),hsl(331,100%,50%),hsl(357.2,100%,50%)); */
-  cursor: not-allowed;
-  filter: grayscale(75%) opacity(75%);
   /* filter: saturate(0%) */
 }
 
