--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,8 @@
   display: flex;
   flex-direction: column;
   font-family: geomanist, Helvetica, sans-serif;
-  margin: 2rem auto 0;  
+  margin-left: auto;
+  margin-right: auto;
   max-width: 640px;
   padding: 2rem;
   width: 50vw;
@@ -88,10 +89,13 @@ button {
   padding: 1rem 1.5rem;
   text-align: center;
   text-decoration: none;
-  transition: background-position .15s cubic-bezier(.45,.05,.55,.95);
+  transition: background-position .25s cubic-bezier(.45,.05,.55,.95);
 }
-
+button:hover{
+  background-position: 100% 0;
+}
 button:disabled {
+  background-position: 0;
   cursor: default;
   filter: grayscale(75%) opacity(75%);
 }
