--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 #root {
+  box-sizing: border-box;
   min-height: 100vh;
+  padding-top:2rem;
   padding-bottom: 4.5rem;
   position: relative;
 }
